Fixed scroll top top on mobile nav click

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -51,6 +51,9 @@ a {
 p {
     font-size: 16px;
 }
+.clear { 
+    clear: both; 
+}
 .float-left {
     float: left;
     margin-right: 25px;
@@ -463,6 +466,64 @@ p {
 
    The styles for the resume section
 ************************************************/
+.page-wrap { 
+    width: 50%; 
+    margin: 40px auto 60px; 
+}
+.page-wrap h3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: normal;
+    border-bottom: 1px solid #e4857c;
+    margin: 0 0 16px 0; 
+    padding: 0 0 16px 0; 
+    font-size: 42px; 
+    font-weight: normal;
+    letter-spacing: 5px;
+}
+.page-wrap p,
+.page-wrap a { 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+    font-style: italic; 
+    color: #191919; 
+}
+.page-wrap strong { 
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 16px;
+}
+.page-wrap dl {
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0
+}
+.page-wrap dt {
+    float: left;
+    width: 50%;
+    padding: 0;
+    margin: 0
+}
+.page-wrap dd {
+    float: left;
+    width: 50%;
+    padding: 0;
+    margin: 0
+}
+.page-wrap .resume-img { 
+    float: right; 
+    margin: -30px 0 0 0; 
+}
+.page-wrap .objective { 
+    width: 500px; 
+    float: left; 
+    margin-top: 1em;
+    margin-bottom: 3em;
+}
+.page-wrap .hr {
+    width: 500px;
+    height: 1px;
+    background-color: #e4857c;
+}
 
 /************************************************
    FOOTER                                 @footer
